--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
     implementation group: 'com.google.cloud.sql', name: 'mysql-socket-factory', version: '1.10.0'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter-sql-mysql', version: '1.2.8.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 test {
