--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,11 @@ databaseChangeLog:
       file: classpath:/db/changelog/changes/locations.sql
   - include:
       file: classpath:/db/changelog/changes/reservations.sql
+  - include:
+      file: classpath:/db/changelog/changes/modify_table_reservation_update_status.sql
+  - include:
+      file: classpath:/db/changelog/changes/add_reservation_status_change_trigger.sql
+#  - include:
+#      file: classpath:/db/changelog/changes/team_leaders.sql
+#  - include:
+#      file: classpath:/db/changelog/changes/modify_table_volunteer_add_team_leader_id.sql
