--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,12 +45,12 @@ jwt:
   header:
     string: Authorization
 
-#server:
-#  port: 443
-#  ssl:
-#    enabled: true
-#    key-store: /root/keystore.p12
-#    key-store-password: 123456
-#    key-store-type: PKCS12
-#    key-alias: mycert
+server:
+  port: 443
+  ssl:
+    enabled: true
+    key-store: /root/keystore.p12
+    key-store-password: 123456
+    key-store-type: PKCS12
+    key-alias: mycert
 
