Update reservation service

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,5 @@ databaseChangeLog:
       file: classpath:/db/changelog/changes/remove_reservation_status_change_trigger.sql
   - include:
       file: classpath:/db/changelog/changes/create_index_for_end_time_and_status.sql
+  - include:
+      file: classpath:/db/changelog/changes/add_fcm_token_to_users_table.sql
