update liquibase changelog

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,22 +1,24 @@
 databaseChangeLog:
-#  - include:
-#      file: classpath:/db/changelog/changes/users.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/authorities.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/user_authorities.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/volunteers.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/locations.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/reservations.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/modify_table_reservation_update_status.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/add_reservation_status_change_trigger.sql
-#  - include:
-#      file: classpath:/db/changelog/changes/team_leaders.sql
+  - include:
+      file: classpath:/db/changelog/changes/users.sql
+  - include:
+      file: classpath:/db/changelog/changes/authorities.sql
+  - include:
+      file: classpath:/db/changelog/changes/user_authorities.sql
+  - include:
+      file: classpath:/db/changelog/changes/insert_admin_user.sql
+  - include:
+      file: classpath:/db/changelog/changes/team_leaders.sql
+  - include:
+      file: classpath:/db/changelog/changes/volunteers.sql
+  - include:
+      file: classpath:/db/changelog/changes/locations.sql
+  - include:
+      file: classpath:/db/changelog/changes/reservations.sql
+  - include:
+      file: classpath:/db/changelog/changes/modify_table_reservation_update_status.sql
+  - include:
+      file: classpath:/db/changelog/changes/add_reservation_status_change_trigger.sql
   - include:
       file: classpath:/db/changelog/changes/remove_reservation_status_change_trigger.sql
   - include:
