--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Run SSH command to update files and run script
       uses: appleboy/ssh-action@v0.1.3
       with:
-        host: ${{ secrets.SSH_IP }}
+        host: 85.132.120.12
         port: 22
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
+        username: gitaction
+        password: '@9BsFZ6La#hsVczx'
         script: |
           cd /root
           echo 'hello' > text.txt
