--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,14 @@ jobs:
         port: 22
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
-        script: |
-          cd /root
-          echo 'hello' > text.txt
+        #script: |
+          cd /opt/salesBackendAPK/
+          docker compose down
+          mv app.log /home/gitaction/app.log.$(date +%F-%H-%M)
+          rm -rf *
+          docker image rm salesbackendapk-app
+          cd ~/
+          git clone git@github.com:MuradAbbaszade/pashapay-volunteer.git
+          cd /opt/salesBackendAPK/
+          mv ~/pashapay-volunteer/* /opt/salesBackendAPK/
+          docker compose up -d
