--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
           sudo docker image rm salesbackendapk-app
           cd ~/
           git clone git@github.com:MuradAbbaszade/pashapay-volunteer.git
-          cd /opt/salesBackendAPK/
           sudo mv ~/pashapay-volunteer/* /opt/salesBackendAPK/
+          rm -rf pashapay-volunteer
+          cd /opt/salesBackendAPK/
           sudo docker compose up -d
