--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,15 @@ jobs:
         port: 2226
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
-        script: |
-          cd /opt/salesBackendAPK/
-          sudo docker compose down
-          sudo mv app.log /home/gitaction/app.log.$(date +%F-%H-%M)
-          sudo rm -rf *
-          sudo docker image rm salesbackendapk-app
-          cd ~/
-          git clone git@github.com:MuradAbbaszade/pashapay-volunteer.git
-          sudo mv ~/pashapay-volunteer/* /opt/salesBackendAPK/
-          rm -rf pashapay-volunteer
-          cd /opt/salesBackendAPK/
-          sudo docker compose up -d
+#        script: |
+#          cd /opt/salesBackendAPK/
+#          sudo docker compose down
+#          sudo mv app.log /home/gitaction/app.log.$(date +%F-%H-%M)
+#          sudo rm -rf *
+#          sudo docker image rm salesbackendapk-app
+#          cd ~/
+#          git clone git@github.com:MuradAbbaszade/pashapay-volunteer.git
+#          sudo mv ~/pashapay-volunteer/* /opt/salesBackendAPK/
+#          rm -rf pashapay-volunteer
+#          cd /opt/salesBackendAPK/
+#          sudo docker compose up -d
